
[metadata]
name         = OPLS
version      = 0.0.1
author       = "Santeri Paajanen, Shreyas Kaptan"
author_email = santeri.e.paajanen@helsinki.fi
description  = PLS and OPLS regressors
long_description = file: README.md
classifiers  = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
dependencies = 
    numpy
    sklearn>=1.1

[options]
package_dir =
    OPLS = src
python_requires = >=3.7

