
[metadata]
name         = OPLS-MD
version      = 0.0.2-dev
author       = "Santeri Paajanen, Shreyas Kaptan"
author_email = santeri.e.paajanen@helsinki.fi
description  = PLS and OPLS regressors
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers  = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
dependencies = 
    numpy
    sklearn>=1.1

[options]
package_dir =
    OPLS_MD = src
python_requires = >=3.7

